[gd_scene load_steps=77 format=3 uid="uid://btk7mfgktmam"]

[ext_resource type="Script" path="res://assets/scripts/enemyRoll.gd" id="1_v6aod"]
[ext_resource type="Texture2D" uid="uid://tnw05yhxychg" path="res://assets/images/cats/kittyCrying.png" id="2_aju5o"]
[ext_resource type="Texture2D" uid="uid://dcurfbii7dasx" path="res://assets/images/cats/CatRolling.png" id="3_cqsjp"]
[ext_resource type="Texture2D" uid="uid://b6sl26ifs0rjc" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame1.png" id="4_5k4di"]
[ext_resource type="Texture2D" uid="uid://c4mmp6fcb5j5a" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame2.png" id="5_g0gla"]
[ext_resource type="Texture2D" uid="uid://dp5gfqaj42ml2" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame3.png" id="6_tt7vj"]
[ext_resource type="Texture2D" uid="uid://c88207dfiwsyo" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame4.png" id="7_kx04f"]
[ext_resource type="Texture2D" uid="uid://c4k6mby31bw0u" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame5.png" id="8_ud546"]
[ext_resource type="Texture2D" uid="uid://bfaf4x86mfrma" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame6.png" id="9_6rhlt"]
[ext_resource type="Texture2D" uid="uid://do71vnsecas7p" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame7.png" id="10_r8yc4"]
[ext_resource type="AudioStream" uid="uid://biacadurg7w8f" path="res://assets/audio/explosion.wav" id="11_n4s74"]
[ext_resource type="Texture2D" uid="uid://75tglr3n1jeo" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d1.png" id="12_bkj7h"]
[ext_resource type="Texture2D" uid="uid://d0wro0a7mj44" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d2.png" id="13_yutmn"]
[ext_resource type="Texture2D" uid="uid://bfucwvbfybvil" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d3.png" id="14_hjken"]
[ext_resource type="Texture2D" uid="uid://dew4i1dhq1ykh" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d4.png" id="15_2q73u"]
[ext_resource type="Texture2D" uid="uid://c0aotw4s4y3ph" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d5.png" id="16_f5fib"]
[ext_resource type="Texture2D" uid="uid://c4crq0em587wx" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d6.png" id="17_sy2o6"]
[ext_resource type="Texture2D" uid="uid://trdtux7ejqjp" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d7.png" id="18_0yvqq"]
[ext_resource type="Texture2D" uid="uid://d1qgc78d4ni7m" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d8.png" id="19_r5xj2"]
[ext_resource type="Texture2D" uid="uid://ctrqgrtsaqcng" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d9.png" id="20_ye2bc"]
[ext_resource type="Texture2D" uid="uid://3mqw2rtupy7j" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d10.png" id="21_52iii"]
[ext_resource type="Texture2D" uid="uid://bwj5su253qp05" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d11.png" id="22_sh6am"]
[ext_resource type="Texture2D" uid="uid://xemvqkfof4il" path="res://assets/images/explosions/athomic-explosion-1-d/Sprites/explosion-d12.png" id="23_8hc6j"]
[ext_resource type="Texture2D" uid="uid://bdokmcruc6ftb" path="res://assets/images/explosions/Explosion/sprites/explosion-animation1.png" id="24_ka1ip"]
[ext_resource type="Texture2D" uid="uid://dckguvbfaybhe" path="res://assets/images/explosions/Explosion/sprites/explosion-animation2.png" id="25_2dv2f"]
[ext_resource type="Texture2D" uid="uid://ddltfi2cu23wv" path="res://assets/images/explosions/Explosion/sprites/explosion-animation3.png" id="26_s2exj"]
[ext_resource type="Texture2D" uid="uid://dw0fma5yprope" path="res://assets/images/explosions/Explosion/sprites/explosion-animation4.png" id="27_rv5u4"]
[ext_resource type="Texture2D" uid="uid://bwqpd81mrkpdt" path="res://assets/images/explosions/Explosion/sprites/explosion-animation5.png" id="28_16btb"]
[ext_resource type="Texture2D" uid="uid://bx2lnlnd0462q" path="res://assets/images/explosions/Explosion/sprites/explosion-animation6.png" id="29_cacv1"]
[ext_resource type="Texture2D" uid="uid://dd2mom5lrj42a" path="res://assets/images/explosions/Explosion/sprites/explosion-animation7.png" id="30_dl1m2"]
[ext_resource type="Texture2D" uid="uid://hbthk3k64amd" path="res://assets/images/explosions/Explosion/sprites/explosion-animation8.png" id="31_oyrj3"]
[ext_resource type="Texture2D" uid="uid://c5mcl81r54ngf" path="res://assets/images/explosions/Explosion/sprites/explosion-animation9.png" id="32_a1av4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8b747"]
atlas = ExtResource("2_aju5o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xusgl"]
atlas = ExtResource("2_aju5o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6vbb"]
atlas = ExtResource("2_aju5o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17hwl"]
atlas = ExtResource("2_aju5o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6grj"]
atlas = ExtResource("3_cqsjp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eoan"]
atlas = ExtResource("3_cqsjp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gevi"]
atlas = ExtResource("3_cqsjp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0m3w"]
atlas = ExtResource("3_cqsjp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcml1"]
atlas = ExtResource("3_cqsjp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0bro"]
atlas = ExtResource("3_cqsjp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooabm"]
atlas = ExtResource("3_cqsjp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cucyk"]
atlas = ExtResource("3_cqsjp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhma2"]
atlas = ExtResource("3_cqsjp")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8yjc"]
atlas = ExtResource("3_cqsjp")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7uu4"]
atlas = ExtResource("3_cqsjp")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h674f"]
atlas = ExtResource("3_cqsjp")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws807"]
atlas = ExtResource("3_cqsjp")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n16c4"]
atlas = ExtResource("3_cqsjp")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql15n"]
atlas = ExtResource("3_cqsjp")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7c2s"]
atlas = ExtResource("3_cqsjp")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63yxt"]
atlas = ExtResource("3_cqsjp")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j6qn"]
atlas = ExtResource("3_cqsjp")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2w51"]
atlas = ExtResource("3_cqsjp")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djphm"]
atlas = ExtResource("3_cqsjp")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7j8b"]
atlas = ExtResource("3_cqsjp")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlwas"]
atlas = ExtResource("3_cqsjp")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbl4a"]
atlas = ExtResource("3_cqsjp")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wylaq"]
atlas = ExtResource("3_cqsjp")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ei6"]
atlas = ExtResource("3_cqsjp")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl13h"]
atlas = ExtResource("3_cqsjp")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrx1p"]
atlas = ExtResource("3_cqsjp")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0qqw"]
atlas = ExtResource("3_cqsjp")
region = Rect2(864, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hm31"]
atlas = ExtResource("3_cqsjp")
region = Rect2(896, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7foq"]
atlas = ExtResource("3_cqsjp")
region = Rect2(928, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1313"]
atlas = ExtResource("3_cqsjp")
region = Rect2(960, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwf03"]
atlas = ExtResource("3_cqsjp")
region = Rect2(992, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_reg67"]
atlas = ExtResource("3_cqsjp")
region = Rect2(1024, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4jar"]
atlas = ExtResource("3_cqsjp")
region = Rect2(1056, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n55xm"]
atlas = ExtResource("3_cqsjp")
region = Rect2(1088, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwbfj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b747")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xusgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6vbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17hwl")
}],
"loop": true,
"name": &"CatCry",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6grj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eoan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gevi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0m3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcml1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0bro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooabm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cucyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhma2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8yjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7uu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h674f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws807")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n16c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql15n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7c2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63yxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j6qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2w51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djphm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7j8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlwas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbl4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wylaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ei6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl13h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrx1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0qqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hm31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7foq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1313")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reg67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4jar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n55xm")
}],
"loop": true,
"name": &"CatRoll",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"CatWalk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqla7"]
size = Vector2(23.3333, 20.8333)

[sub_resource type="SpriteFrames" id="SpriteFrames_775s4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5k4di")
}, {
"duration": 1.0,
"texture": ExtResource("5_g0gla")
}, {
"duration": 1.0,
"texture": ExtResource("6_tt7vj")
}, {
"duration": 1.0,
"texture": ExtResource("7_kx04f")
}, {
"duration": 1.0,
"texture": ExtResource("8_ud546")
}, {
"duration": 1.0,
"texture": ExtResource("9_6rhlt")
}, {
"duration": 1.0,
"texture": ExtResource("10_r8yc4")
}],
"loop": false,
"name": &"Explosion",
"speed": 16.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_icop2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_bkj7h")
}, {
"duration": 1.0,
"texture": ExtResource("13_yutmn")
}, {
"duration": 1.0,
"texture": ExtResource("14_hjken")
}, {
"duration": 1.0,
"texture": ExtResource("15_2q73u")
}, {
"duration": 1.0,
"texture": ExtResource("16_f5fib")
}, {
"duration": 1.0,
"texture": ExtResource("17_sy2o6")
}, {
"duration": 1.0,
"texture": ExtResource("18_0yvqq")
}, {
"duration": 1.0,
"texture": ExtResource("19_r5xj2")
}, {
"duration": 1.0,
"texture": ExtResource("20_ye2bc")
}, {
"duration": 1.0,
"texture": ExtResource("21_52iii")
}, {
"duration": 1.0,
"texture": ExtResource("22_sh6am")
}, {
"duration": 1.0,
"texture": ExtResource("23_8hc6j")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"AtomicExplosion",
"speed": 16.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g0fwn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_ka1ip")
}, {
"duration": 1.0,
"texture": ExtResource("25_2dv2f")
}, {
"duration": 1.0,
"texture": ExtResource("26_s2exj")
}, {
"duration": 1.0,
"texture": ExtResource("27_rv5u4")
}, {
"duration": 1.0,
"texture": ExtResource("28_16btb")
}, {
"duration": 1.0,
"texture": ExtResource("29_cacv1")
}, {
"duration": 1.0,
"texture": ExtResource("30_dl1m2")
}, {
"duration": 1.0,
"texture": ExtResource("31_oyrj3")
}, {
"duration": 1.0,
"texture": ExtResource("32_a1av4")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"BigExplosion",
"speed": 16.0
}]

[node name="EnemyRoll" type="Node2D"]
script = ExtResource("1_v6aod")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CatSprites" type="AnimatedSprite2D" parent="Area2D"]
position = Vector2(1, 0)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_kwbfj")
animation = &"CatRoll"
autoplay = "CatRoll"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 10.5)
scale = Vector2(1.2, 1.2)
shape = SubResource("RectangleShape2D_uqla7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Area2D"]
position = Vector2(-2, 10.5)
scale = Vector2(1.6, 1.25)

[node name="Explosion" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 7)
sprite_frames = SubResource("SpriteFrames_775s4")
animation = &"Explosion"
frame = 6
frame_progress = 1.0

[node name="Audio" type="AudioStreamPlayer2D" parent="Explosion"]
stream = ExtResource("11_n4s74")

[node name="Explosions" type="Node2D" parent="."]

[node name="AtomicExplosion" type="AnimatedSprite2D" parent="Explosions"]
position = Vector2(0, -34)
sprite_frames = SubResource("SpriteFrames_icop2")
animation = &"AtomicExplosion"
autoplay = "AtomicExplosion"
frame = 12

[node name="BigExplosion" type="AnimatedSprite2D" parent="Explosions"]
sprite_frames = SubResource("SpriteFrames_g0fwn")
animation = &"BigExplosion"
autoplay = "BigExplosion"
frame = 9

[node name="Audioxd" type="AudioStreamPlayer2D" parent="Explosions/BigExplosion"]
stream = ExtResource("11_n4s74")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="Area2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="Explosion/Audio" to="." method="_on_audio_finished"]
